# musicky

./: .gitignore  README.md  example.mid  example.py  pyproject.toml
.github/workflows/: ci.yml
src/musicky/: __init__.py  _rng.py  sf.py
src/musicky/core/: __init__.py  automation.py  node.py  piece.py  render.py  timeline.py
src/musicky/effects/: __init__.py  fx.py
src/musicky/patterns/: __init__.py  grooves.py  shapes.py
src/musicky/primitives/: __init__.py  chord.py  note.py  scale.py
src/musicky/sounds/: __init__.py  drumkit.py  instruments.py  kits.py
src/musicky/util/: __init__.py  customize.py
tests/: test_advanced_fx.py  test_automation.py  test_chord.py  test_custom.py  test_debug.py  test_drumkit.py  test_fx.py  test_fx_integration.py  test_helpers.py  test_instruments.py  test_kits.py  test_movement_fx.py  test_node.py  test_note.py  test_output.py  test_patterns.py  test_play_midi.py  test_play_optional.py  test_play_web.py  test_render_correctness.py  test_scale.py  test_sf.py  test_timeline.py  test_validation.py  test_version.py
