[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicky"
version = "0.0.1"
description = "A Python library."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "EdamAme-x", email = "reireireiakua@gmail.com" }]
keywords = ["music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    # SoundFont-based synthesis is the default rendering engine, so the
    # binding is a hard dependency. Users still need libfluidsynth from
    # their OS package manager.
    "pyfluidsynth>=1.3",
]

[project.urls]
Homepage = "https://github.com/EdamAme-x/musicky"
Repository = "https://github.com/EdamAme-x/musicky"
Issues = "https://github.com/EdamAme-x/musicky/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]
pygame = ["pygame>=2.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/musicky"]

[tool.hatch.build.targets.sdist]
include = ["src/musicky", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# Public re-export modules group their __all__ entries by topic with comments;
# isort-style alphabetical sorting would scramble those groupings.
"src/musicky/__init__.py" = ["RUF022"]
"src/musicky/primitives/__init__.py" = ["RUF022"]
"src/musicky/effects/fx.py" = ["RUF022"]
"src/musicky/sounds/instruments.py" = ["RUF022"]
"src/musicky/sounds/kits.py" = ["RUF022"]
"src/musicky/sounds/drumkit.py" = ["RUF022"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/musicky", "tests"]
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/musicky"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
